# oxide-server

./: Cargo.toml  README.md  build.rs
src/: chats.json  data.rs  main.rs  model.rs  texts.json  users.json
