[package]
name = "oxide"
version = "0.1.0"
authors = ["tauseefk"]
edition = "2018"

[dependencies]
tonic = "0.4"
prost = "0.7"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
rand = "0.3"

mongodb = "2.0.0-beta"
bson = "1.2.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.4"